security/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: workspace-ns
spec:
  podSelector:
    matchLabels:
      app: redis-deployment
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
          - 192.168.1.0/24
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
          - 192.168.1.0/24
    ports:
    - protocol: TCP
      port: 6379
